--- a/.babelrc
+++ b/.babelrc
@@ -1,21 +1,11 @@
 {
   "presets": [
     [
-      "@babel/preset-env",
-      {
+      "@babel/preset-env", {
         "targets": {
-          "browsers": ["last 1 versions", "ie 11"]
+          "node": "current"
         }
       }
     ]
-  ],
-  "plugins": [
-  ],
-  "env": {
-    "development": {
-      "presets": [
-        "power-assert"
-      ]
-    }
-  }
+  ]
 }
