--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,18 @@
 {
   "root": true,
-  "parser": "babel-eslint",
-  "extends": "eslint:recommended",
-  "plugins": [
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
   ],
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module",
-    "ecmaVersion": 6,
+    "project": "./tsconfig.json",
+    "ecmaVersion": 2020,
     "ecmaFeatures": {
       "impliedStrict": true,
       "jsx": false
@@ -18,16 +24,32 @@
     "eqeqeq": 2,
     "space-before-blocks": [2, "always"],
     "space-before-function-paren": [2, {
-      "anonymous": "never",
+      "anonymous": "always",
       "named": "never",
       "asyncArrow": "always"
     }],
     "space-infix-ops": 2,
     "keyword-spacing": 2,
-    "indent": ["error", 2, { "SwitchCase": 1 } ],
+    "import/no-unresolved": 0,
+    "indent": [
+      "error",
+      2,
+      {
+        "SwitchCase": 1
+      }
+    ],
     "linebreak-style": [2, "unix"],
     "quotes": [2, "single"],
-    "comma-dangle": [2, "only-multiline"],
+    "comma-dangle": [
+      "error",
+      {
+        "arrays": "always-multiline",
+        "objects": "always-multiline",
+        "imports": "always-multiline",
+        "exports": "always-multiline",
+        "functions": "ignore"
+      }
+    ],
     "curly": 2,
     "camelcase": 2,
     "brace-style": 2,
@@ -38,14 +60,16 @@
     "no-console": 0
   },
   "globals": {
+    "module": "readonly",
+    "defineProps": true,
+    "defineEmits": true,
+    "withDefaults": true
   },
   "env": {
     "es6": true,
-    "jquery": false,
     "commonjs": true,
-    "amd": false,
     "node": true,
-    "mocha": true,
+    "jest": true,
     "browser": true
   }
 }
